--- a/index.css
+++ b/index.css
@@ -1,46 +1,539 @@
-body {
-  background-image: url("bg.png");
+@font-face {
+  font-family: league-spartan;
+  src: url("./fonts/LeagueSpartan-VariableFont_wght.ttf");
 }
-h1 {
+
+@font-face {
+  font-family: nise-sega-sonic;
+  src: url("./fonts/NiseSegaSonic.TTF");
+}
+
+@font-face {
+  font-family: anton;
+  src: url("./fonts/Anton-Regular.ttf");
+}
+
+@font-face {
+  font-family: horizon;
+  src: url("./fonts/Horizon.otf");
+}
+
+.sitenav {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  display: flex;
+  flex-wrap: nowrap;
+  height: 30px;
+  justify-content: space-between;
+  background: #20174e;
+  padding: 10px;
+  z-index: 3;
+}
+
+.navbar {
+  margin-right: 15px;
+  display: flex;
+  flex-wrap: nowrap;
+  z-index: 1;
+}
+
+.cornerlogo {
+  margin-left: 15px;
+  font-family: nise-sega-sonic;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 28px;
+  color: #ffffff;
+  text-decoration: none;
+}
+
+.cornerlogo:visited {
   color: #ffffff;
 }
-h2 {
+
+.naventry {
+  padding: 8px;
+  font-family: league-spartan;
+  font-size: 24px;
+  margin-right: 15px;
+  color: #facb40;
+  text-decoration: none;
+  background: #3e3377;
+  border: 1px solid #3e3377;
+  border-radius: 3px;
+  transition: color .2s;
+  transition: background .2s;
+  -webkit-transition: color .2s;
+  -webkit-transition: background .2s;
+  -moz-transition: color .2s;
+  -moz-transition: background .2s;
+  -ms-transition: color .2s;
+  -ms-transition: background .2s;
+  -o-transition: color .2s;
+  -o-transition: background .2s;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-bottom: 26px;
+  text-align: center;
+}
+
+.naventry:visited {
+  color: #facb40;
+}
+
+.naventry:hover {
+  color: #ffffff;
+  background: #665c9b;
+}
+
+.sitebody {
+  background: url("./bg.png") repeat;
+  background-attachment: fixed;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  padding-top: 60px;
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-bottom: 0px;
+}
+
+.bluebar {
+  background-color: #466feb;
+  width: 100%;
+  height: 1250px;
+  display: flex;
+  align-items: start;
+}
+
+.blueteeth {
+  width: 100%;
+  height: 64px;
+  background: url("./blueteeth.png") repeat-x;
+}
+
+.indigoteeth {
+  width: 100%;
+  height: 64px;
+  background: url("./indigoteeth.png") repeat-x;
+}
+
+.indigobar {
+  background-color: #20174e;
+  width: 100%;
+  height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.sitefooter {
+  margin-left: 200px;
+  margin-right: 200px;
+  text-align: center;
+}
+
+.gameplay-prev {
+  border: solid #ffffff 2px;
+  border-radius: 50px;
+  position: absolute;
+  overflow: hidden;
+  width: 55%;
+  margin: 80px;
+  background-color: #20174e;
+}
+
+.gameplay-prev2 {
+  border: solid #ffffff 2px;
+  border-radius: 50px;
+  width: 800px;
+  overflow: hidden;
+}
+
+.circle {
+  border: dashed 4px #675d9c;
+  border-radius: 50%;
+  width: 1200px;
+  height: 1100px;
+  top: 300px;
+  position: fixed;
+  background-color: #edb0ff;
+  z-index: -2;
+}
+
+.text-section {
+  background: #facb40;
+  color: #20174e;
+  font-family: sans-serif;
+  font-size: 16;
+  padding: 20px;
+  padding-left: 30px;
+  padding-right: 30px;
+  position: absolute;
+  width: 30%;
+  left: 6%;
+  box-shadow: 12px 12px #20174e;
+}
+
+.skewed-div {
+  -webkit-transform: skewY(-2.5deg);
+  -moz-transform: skewY(-2.5deg);
+  -ms-transform: skewY(-2.5deg);
+  -o-transform: skewY(-2.5deg);
+  transform: skewY(-2.5deg);
+  width: 100%;
+  margin-top: 120px;
+  margin-bottom: 60px;
+  background: #20174e;
+}
+
+.skewed-div2 {
+  -webkit-transform: skewY(2.5deg);
+  -moz-transform: skewY(2.5deg);
+  -ms-transform: skewY(2.5deg);
+  -o-transform: skewY(2.5deg);
+  transform: skewY(2.5deg);
+  width: 100%;
+  margin-top: 120px;
+  margin-bottom: 60px;
+  background: #20174e;
+}
+
+.green-triangle {
+  -webkit-transform: skewY(28deg);
+  -moz-transform: skewY(28deg);
+  -ms-transform: skewY(28deg);
+  -o-transform: skewY(28deg);
+  transform: skewY(28deg);
+  width: 100%;
+  height: 500px;
+  position: absolute;
+  top: 840px;
+  background-color: #3fac4d;
+  left: 0px;
+  z-index: -1;
+}
+
+.red-triangle {
+  -webkit-transform: skewY(-28deg);
+  -moz-transform: skewY(-28deg);
+  -ms-transform: skewY(-28deg);
+  -o-transform: skewY(-28deg);
+  transform: skewY(-28deg);
+  width: 100%;
+  height: 500px;
+  position: absolute;
+  top: 840px;
+  background-color: #f05f81;
+  right: 0px;
+  z-index: -1;
+}
+
+.skewed-header {
+  color: #ffffff;
+  font-family: anton;
+  font-size: 60px;
+  width: 400px;
+  margin-left: 150px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.skewed-header-right {
+  color: #ffffff;
+  font-family: anton;
+  font-size: 60px;
+  width: 400px;
+  margin-left: 60%;;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.skewed-subheader {
+  color: #20174e;
+  font-family: horizon;
+  font-size: 36px;
+}
+
+.skewed-subbar {
+  background-color: #ffffff;
+  margin-left: 0;
+  margin-right: 0;
+  width: 100%;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.text-dark {
+  font-family: sans-serif;
+  font-size: 20px;
+  color: #20174e;
+}
+
+.character-art {
+  position: absolute;
+  width: 320px;
+}
+
+.preview-1 {
+  top: 900px;
+  right: 00px;
+}
+
+.text-2 {
+  top: 1400px;
+  right: 12%;
+}
+
+.bar2 {
+  height: 1500px;
+}
+
+.welcome-text {
+  font-family: nise-sega-sonic;
+  font-size: 48px;
+  text-align: center;
   color: #ffffff;
 }
-h3 {
+
+.outline-text {
+  font-family: nise-sega-sonic;
+  font-size: 48px;
+  text-align: center;
+  color: #20174e;
+  text-shadow:
+  -1px -1px 0 #ffffff,
+  1px -1px 0 #ffffff,
+  -1px 1px 0 #ffffff,
+  1px 1px 0 #ffffff;
+}
+
+.download-button {
+  background-color: #20174e;
+  color: #ffffff;
+  border: 2px solid #ffffff;
+  width: 400px;
+  height: 400px;
+  border-radius: 20%;
+  display: block;
+  align-items: center;
+  text-align: center;
+  padding: 30px;
+
+  transition: background .2s;
+  -webkit-transition: background .2s;
+  -moz-transition: background .2s;
+  -ms-transition: background .2s;
+  -o-transition: background .2s;
+}
+
+.download-text {
+  font-family: nise-sega-sonic;
+  font-size: 24px;
+  color: #ffffff;
+  text-decoration: none;
+}
+
+.download-text:visited {
   color: #ffffff;
 }
-h4 {
-  color: #ffffff;
+
+.download-button:hover {
+  background: #665c9b;
 }
-h5 {
-  color: #ffffff;
+
+.download-icon {
+  -webkit-transition: scale .2s;
 }
-h6 {
-  color: #ffffff;
+
+.download-icon:hover {
+  scale: 1.08;
 }
+
+nav {
+  text-align: center;
+}
+
 p {
-  color: #ffffff;
+  font-family: sans-serif;
+  color: #8b72b6;
 }
-a:link {
-	color: #3333FF;
+
+video {
+  object-fit: fill;
 }
-a:visited {
-	color: #9933CC;
+
+@media (max-width: 1700px) {
+  .bluebar {
+    background-color: #466feb;
+    width: 100%;
+    height: 1000px;
+    display: flex;
+    align-items: start;
+  }
+
+  .skewed-header {
+    color: #ffffff;
+    font-family: anton;
+    font-size: 60px;
+    width: 400px;
+    margin-left: 2%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
+  .gameplay-prev {
+    border: solid #ffffff 2px;
+    border-radius: 50px;
+    position: absolute;
+    overflow: hidden;
+    width: 47%;
+    background-color: #20174e;
+  }
+
+
+
+  .text-dark {
+    font-family: sans-serif;
+    font-size: 14px;
+    color: #20174e;
+  }
+
+  .preview-1 {
+    top: 800px;
+    right: 0px;
+  }
+
+  .text-2 {
+    top: 1250px;
+    right: 12%
+  }
 }
-a:hover {
-	color: #3333FF;
+
+@media (max-width: 1600px) {
+  .gameplay-prev2 {
+    border: solid #ffffff 2px;
+    border-radius: 50px;
+    width: 600px;
+    margin: 6px;
+    overflow: hidden;
+  }
+
+  .bar2 {
+    height: 1200px;
+  }
 }
-a:active {
-	color: #FF3333;
+
+@media (min-width: 2032px) {
+  .gameplay-prev {
+    border: solid #ffffff 2px;
+    border-radius: 50px;
+    position: absolute;
+    overflow: hidden;
+    width: 800px;
+    background-color: #20174e;
+  }
 }
-ul {
-  list-style: none; /* Remove default bullets */
+
+@media (max-width: 1220px) {
+  .bar2 {
+    height: 2200px;
+  }
+
+  .outline-text {
+    font-family: nise-sega-sonic;
+    font-size: 36px;
+    text-align: center;
+    color: #20174e;
+    text-shadow:
+    -1px -1px 0 #ffffff,
+    1px -1px 0 #ffffff,
+    -1px 1px 0 #ffffff,
+    1px 1px 0 #ffffff;
+  }
+
+  .welcome-text {
+    font-family: nise-sega-sonic;
+    font-size: 36px;
+    text-align: center;
+    color: #ffffff;
+  }
 }
-ul li::before {
-  content: "\2022";  /* Add content: \2022 is the CSS Code/unicode for a bullet */
-  color: #ffffff; /* Change the color */
-  display: inline-block; /* Needed to add space between the bullet and the text */
-  width: 1em; /* Also needed for space (tweak if needed) */
-  margin-left: -1em; /* Also needed for space (tweak if needed) */
+
+@media (max-width: 920px) {
+  .outline-text {
+    font-family: nise-sega-sonic;
+    font-size: 24px;
+    text-align: center;
+    color: #466feb;
+    text-shadow:
+    -1px -1px 0 #ffffff,
+    1px -1px 0 #ffffff,
+    -1px 1px 0 #ffffff,
+    1px 1px 0 #ffffff;
+  }
+
+  .welcome-text {
+    font-family: nise-sega-sonic;
+    font-size: 24px;
+    text-align: center;
+    color: #ffffff;
+  }
+}
+
+@media (max-width: 1002px) {
+  .gameplay-prev {
+    display: none;
+  }
+
+  .skewed-header {
+    color: #ffffff;
+    font-family: anton;
+    font-size: 60px;
+    width: 400px;
+    margin-left: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
+  .text-section {
+    background: #facb40;
+    color: #20174e;
+    font-family: sans-serif;
+    font-size: 16;
+    padding: 20px;
+    padding-left: 30px;
+    padding-right: 30px;
+    width: 75%;
+    box-shadow: 12px 12px #20174e;
+  }
 }
