--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,14 @@ body {
     margin: 0 15px;
     font-size: 1rem;
   }
+
+  .navbar {
+    margin-right: 35px;
+  }
+
+  .naventry {
+    margin: 0px 10px;
+  }
   
   /* Main Section */
   .main {
