--- a/index.css
+++ b/index.css
@@ -1,21 +1,21 @@
 @font-face {
   font-family: league-spartan;
-  src: url("./fonts/LeagueSpartan-VariableFont_wght.ttf");
+  src: url("./fonts/PUSAB___.otf");
 }
 
 @font-face {
   font-family: nise-sega-sonic;
-  src: url("./fonts/NiseSegaSonic.TTF");
+  src: url("./fonts/PUSAB___.otf");
 }
 
 @font-face {
   font-family: anton;
-  src: url("./fonts/Anton-Regular.ttf");
+  src: url("./fonts/Pepperoni-Regular-V2.otf");
 }
 
 @font-face {
   font-family: horizon;
-  src: url("./fonts/Horizon.otf");
+  src: url("./fonts/Pepperoni-Regular-V2.otf");
 }
 
 .sitenav {
